[package]
name = "oec-server"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"  # Web framework for building HTTP servers
tokio = { version = "1", features = ["full"] }  # Asynchronous runtime
tokio-tungstenite = "0.24.0"  # WebSocket support for tokio
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7", features = ["v4"] }
serde_json = "1.0"